[project]
name = "traffic-signal-bench"
version = "1.0.0"
description = "OpenEnv environment for AI agent traffic signal control"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "openai>=1.6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "run_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
py-modules = [
    "server",
    "run_server",
    "environment",
    "simulator",
    "graders",
    "models",
    "inference",
    "test_env",
    "run_demo",
]
